# youtube_music

./: .replit  1Live_link_match.csv  Einslive_to_YTMusic_Bot.py  Google.py  YTmusic_handler.py  client_secret.json  csv_to_playlist.py  headers_auth.json  keep_alive.py  main.py  new_scraper.ipynb  playlist_links.txt  playlist_to_delete.txt  pyproject.toml  spotify_handler.py  spotipy_playlist_creation.py  test_yt_api.ipynb  token_youtube_v3.pickle
templates/: index.html
